# test_seazone_code

./: README.md  env_example.md  pyproject.toml  requirements.txt
test_seazone_code/: fixtures.txt  manage.py  mockup_announcement.json  mockup_immobile.json  mockup_reserve.json
test_seazone_code/apps/announcement/: models.py  serializers.py  urls.py  views.py
test_seazone_code/apps/announcement/tests/: tests_models.py  tests_views.py
test_seazone_code/apps/core/: abstracts.py
test_seazone_code/apps/core/utils/: dates.py  tokens.py
test_seazone_code/apps/immobile/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
test_seazone_code/apps/immobile/tests/: tests_models.py  tests_views.py
test_seazone_code/apps/reserve/: models.py  serializers.py  urls.py  views.py
test_seazone_code/apps/reserve/tests/: tests_models.py  tests_views.py
test_seazone_code/command/management/commands/: fixtures.py
test_seazone_code/configuration/: settings.py  urls.py
test_seazone_code/configuration/settings/: auth_settings.py  base.py  database_settings.py  host_settings.py  installed_apps_settings.py  internationalizations_settings.py  media_settings.py
